# flappy_ferris

./: Cargo.toml  README.md  serve.py
demo/: flappy_ferris.js  index.html
src/: asset.rs  background.rs  compat.rs  core.rs  enemy.rs  main.rs  player.rs
src/scene/: game.rs  mod.rs  system.rs
