[package]
name = "flappy_ferris"
version = "0.1.0"
authors = ["Yukinari Tani <yukinarit84@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.1"
quicksilver = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
rand = { version = "0.7", features = ["stdweb"] }
log = "0.4"
stdweb-logger = { git = "https://github.com/YushiOMOTE/stdweb-logger.git" }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# js-sys = "0.3"
# console_log = "0.1"
